--- a/P1.md
+++ b/P1.md
@@ -263,8 +263,8 @@ gc()           # Garbage collection, reporta memoria en uso
 ```
 
     ##          used (Mb) gc trigger (Mb) limit (Mb) max used (Mb)
-    ## Ncells 454577 24.3     971782 51.9         NA   654017   35
-    ## Vcells 869576  6.7    8388608 64.0      16384  1832416   14
+    ## Ncells 454361 24.3     970561 51.9         NA   655225   35
+    ## Vcells 868977  6.7    8388608 64.0      16384  1832159   14
 
 Para borrar todos nuestros objetos, usamos el siguiente comando, que
 equivale a usar la escobita de la venta de environment
@@ -293,10 +293,13 @@ setwd("/Users/anaescoto/Dropbox/2020/CursoR-posgrado-pol")# Cambio de directorio
 list.files()      # Lista de archivos en ese directorio
 ```
 
-    ## [1] "CursoR-posgrado-pol.Rproj" "datos"                    
-    ## [3] "intro1.png"                "LICENSE"                  
-    ## [5] "P1.html"                   "P1.Rmd"                   
-    ## [7] "packrat"                   "README.md"
+    ##  [1] "CursoR-posgrado-pol.Rproj" "datos"                    
+    ##  [3] "intro1.png"                "LICENSE"                  
+    ##  [5] "mi_exportacion.sav"        "Mi_Exportación.xlsx"      
+    ##  [7] "P1.md"                     "P1.Rmd"                   
+    ##  [9] "P2.html"                   "P2.md"                    
+    ## [11] "P2.Rmd"                    "packrat"                  
+    ## [13] "presentaciones"            "README.md"
 
 Checar que esto también se puede hacer desde el menú:
 
@@ -336,7 +339,7 @@ install.packages("foreign", dependencies = TRUE)
 
     ## 
     ## The downloaded binary packages are in
-    ##  /var/folders/fr/mw1x21js54367mjdhqsjfwqm0000gn/T//Rtmp60boV7/downloaded_packages
+    ##  /var/folders/fr/mw1x21js54367mjdhqsjfwqm0000gn/T//Rtmp7d8R6p/downloaded_packages
 
 ``` r
 install.packages("haven", dependencies = TRUE)
@@ -347,7 +350,7 @@ install.packages("haven", dependencies = TRUE)
 
     ## 
     ## The downloaded binary packages are in
-    ##  /var/folders/fr/mw1x21js54367mjdhqsjfwqm0000gn/T//Rtmp60boV7/downloaded_packages
+    ##  /var/folders/fr/mw1x21js54367mjdhqsjfwqm0000gn/T//Rtmp7d8R6p/downloaded_packages
 
 Este proceso no hay que hacerlo siempre. Si no sólo la primera vez. Una
 vez instalado un paquete de librería, la llamamos con el comando
@@ -367,7 +370,7 @@ He puesto un ejemplo de una base de datos mexicana en dbf, en este
 formato.
 
 ``` r
-ecovid0420<-read.dbf("./datos/ecovid0420.dbf") #checa cómo nos vamos adentro de nuestro directorio
+ecovid0420<-read.dbf("./datos/ecovid0420.DBF") #checa cómo nos vamos adentro de nuestro directorio
 ```
 
 # Ejercicio
