--- a/P3.Rmd
+++ b/P3.Rmd
@@ -35,6 +35,55 @@ Por si no tuviéramos cargada la base de datos, la volveremos a cargar
 ecovid0420 <- read_dta("./datos/ecovid0420.dta")
 ```
 
+# Continuación "Subsetting"
+## Selección "inversa"
+O sea no "botar algo", es con el negativo. No funciona con todos los formatos
+```{r}
+x<-ecovid0420 %>% 
+  select(-pb3)
+x<-ecovid0420[,-10]
+
+rm(x) #rm sólo bota objetos
+```
+
+Pero con los otros formatos podemos "asignar" valores adentro de un data.frame, y uno de eso valores puede ser "la nada""
+```{r}
+ecovid0420$pb3_2<-ecovid0420$pb3
+ecovid0420$pb3_2<-NULL
+
+```
+
+De aquí viene esa cuesta en el aprendizaje; tenemos que comprender en qué forma programó el que hizo la librería e incluso a veces cómo aprendió quién te está enseñando o el foro que estás leyendo.
+
+# Subsetting 
+Rara vez utilizamos una base de datos completa, y rara vez queremos hacer operaciones completas con ellas.
+
+Vamos a pedir cosas más específicas y podemos seleccionar observaciones o filas. Como nuestra base de datos es muy grande, guardaremos el filtro o selección en un objeto.
+
+```{r}
+subset1<-ecovid0420[ecovid0420$pb3>4,]
+```
+
+También podemos seleccionar columnas
+```{r}
+subset2<- ecovid0420[, c("pb1", "pb2", "pb3")]
+```
+
+podemos combinar los dos tipos de selección
+```{r}
+subset3<- ecovid0420[(ecovid0420$pb3>4 & ecovid0420$pb1==1 ), c("pb1", "pb2", "pb3")]
+```
+
+
+Con dplyr, podemos usar "filter" y "select"
+
+```{r}
+
+subset4<-ecovid0420 %>% 
+  filter(pb3>4 & pb1==1) %>%
+    select(pb1, pb2, pb3)
+```
+
 # Variables nominales
 La variable nominal "pb1", se captura con "1" para hombres y con un "2" para mujeres en la base de datos. Podemos establecer una operación de igual y además sumar los casos que cumplan con esta condición:
 ```{r}
@@ -172,7 +221,7 @@ ecovid0420 %>%
                 adorn_percentages("col") %>% # Divide los valores entre el total de la columna
                 adorn_pct_formatting() # lo vuelve porcentaje
 ```
-Cuando se hagan cuadros de distribuciones (que todas sus partes suman 100), los porcentajes pueden ser una gran ayuda para la interpretación, sobre todos cuando se comparar poblaciones de categorías de diferente tamaño. Por lo general, queremos que los cuadros nos den información de donde están los totales y su 100%, de esta manera el lector se puede guiar de porcentaje con respecto a qué está leyendo. En este caso, vemos que el 100% es común en la última fila. Ello quiere decir que, por ejemplo, el 21.8% del 100% hombres mayores de 5 años tienen un nivel de instrucción de primaria completa. 
+Cuando se hagan cuadros de distribuciones (que todas sus partes suman 100), los porcentajes pueden ser una gran ayuda para la interpretación, sobre todos cuando se comparar poblaciones de categorías de diferente tamaño. Por lo general, queremos que los cuadros nos den información de donde están los totales y su 100%, de esta manera el lector se puede guiar de porcentaje con respecto a qué está leyendo. En este caso, vemos que el 100% es común en la última fila. 
 
 Veamos la diferencia de cómo podemos leer la misma celda, pero hoy, hemos calculado los porcentajes a nivel de fila:
 ```{r}
