--- a/P3.md
+++ b/P3.md
@@ -27,6 +27,66 @@ Por si no tuviéramos cargada la base de datos, la volveremos a cargar
 ecovid0420 <- read_dta("./datos/ecovid0420.dta")
 ```
 
+# Continuación “Subsetting”
+
+## Selección “inversa”
+
+O sea no “botar algo”, es con el negativo. No funciona con todos los
+formatos
+
+``` r
+x<-ecovid0420 %>% 
+  select(-pb3)
+x<-ecovid0420[,-10]
+
+rm(x) #rm sólo bota objetos
+```
+
+Pero con los otros formatos podemos “asignar” valores adentro de un
+data.frame, y uno de eso valores puede ser “la nada”"
+
+``` r
+ecovid0420$pb3_2<-ecovid0420$pb3
+ecovid0420$pb3_2<-NULL
+```
+
+De aquí viene esa cuesta en el aprendizaje; tenemos que comprender en
+qué forma programó el que hizo la librería e incluso a veces cómo
+aprendió quién te está enseñando o el foro que estás leyendo.
+
+# Subsetting
+
+Rara vez utilizamos una base de datos completa, y rara vez queremos
+hacer operaciones completas con ellas.
+
+Vamos a pedir cosas más específicas y podemos seleccionar observaciones
+o filas. Como nuestra base de datos es muy grande, guardaremos el filtro
+o selección en un objeto.
+
+``` r
+subset1<-ecovid0420[ecovid0420$pb3>4,]
+```
+
+También podemos seleccionar columnas
+
+``` r
+subset2<- ecovid0420[, c("pb1", "pb2", "pb3")]
+```
+
+podemos combinar los dos tipos de selección
+
+``` r
+subset3<- ecovid0420[(ecovid0420$pb3>4 & ecovid0420$pb1==1 ), c("pb1", "pb2", "pb3")]
+```
+
+Con dplyr, podemos usar “filter” y “select”
+
+``` r
+subset4<-ecovid0420 %>% 
+  filter(pb3>4 & pb1==1) %>%
+    select(pb1, pb2, pb3)
+```
+
 # Variables nominales
 
 La variable nominal “pb1”, se captura con “1” para hombres y con un “2”
@@ -328,9 +388,7 @@ sobre todos cuando se comparar poblaciones de categorías de diferente
 tamaño. Por lo general, queremos que los cuadros nos den información de
 donde están los totales y su 100%, de esta manera el lector se puede
 guiar de porcentaje con respecto a qué está leyendo. En este caso, vemos
-que el 100% es común en la última fila. Ello quiere decir que, por
-ejemplo, el 21.8% del 100% hombres mayores de 5 años tienen un nivel de
-instrucción de primaria completa.
+que el 100% es común en la última fila.
 
 Veamos la diferencia de cómo podemos leer la misma celda, pero hoy,
 hemos calculado los porcentajes a nivel de fila:
@@ -419,7 +477,7 @@ ecovid0420 %>%
 hist(ecovid0420$pe10_1)
 ```
 
-![](P3_files/figure-gfm/unnamed-chunk-23-1.png)<!-- -->
+![](P3_files/figure-gfm/unnamed-chunk-29-1.png)<!-- -->
 
 A veces, para asegurarnos que tenemos los casos, nuestro análisis lo
 hacemos filtrando a quiénes reportaron estar ocupados y ese 99 parece
@@ -429,7 +487,7 @@ ser una codificación de quienes no respondieron.
 hist(ecovid0420[ecovid0420$clase2==1 & ecovid0420$pe10_1<99,]$pe10_1)
 ```
 
-![](P3_files/figure-gfm/unnamed-chunk-24-1.png)<!-- -->
+![](P3_files/figure-gfm/unnamed-chunk-30-1.png)<!-- -->
 
 Podemos modificarlo de a poco a poco. Modificar el título
 
@@ -437,7 +495,7 @@ Podemos modificarlo de a poco a poco. Modificar el título
 hist(ecovid0420[ecovid0420$clase2==1 & ecovid0420$pe10_1<99,]$pe10_1, main="Histograma de horas trabajadas") 
 ```
 
-![](P3_files/figure-gfm/unnamed-chunk-25-1.png)<!-- --> Le podemos
+![](P3_files/figure-gfm/unnamed-chunk-31-1.png)<!-- --> Le podemos
 modificar el título del eje de las x y de las y
 
 ``` r
@@ -446,7 +504,7 @@ hist(ecovid0420[ecovid0420$clase2==1,]$pe10_1,
      xlab="Hrs", ylab="Frecuencia") 
 ```
 
-![](P3_files/figure-gfm/unnamed-chunk-26-1.png)<!-- -->
+![](P3_files/figure-gfm/unnamed-chunk-32-1.png)<!-- -->
 
 ¡A ponerle colorcitos\! Aquí hay una lista
 <http://www.stat.columbia.edu/~tzheng/files/Rcolor.pdf>
@@ -458,7 +516,7 @@ hist(ecovid0420[ecovid0420$clase2==1 & ecovid0420$pe10_1<99,]$pe10_1,
      ylab="Frecuencia", col="deeppink1") 
 ```
 
-![](P3_files/figure-gfm/unnamed-chunk-27-1.png)<!-- -->
+![](P3_files/figure-gfm/unnamed-chunk-33-1.png)<!-- -->
 
 ## con pipes
 
@@ -468,7 +526,7 @@ ecovid0420 %>%
     with(hist(pe10_1)) # con with, para que entienda
 ```
 
-![](P3_files/figure-gfm/unnamed-chunk-28-1.png)<!-- -->
+![](P3_files/figure-gfm/unnamed-chunk-34-1.png)<!-- -->
 
 Cuando usamos pipes, se debe de recordar que no es necesario escribir el
 nombre del data.frame en el filtro porque es lo primero que colocamos en
@@ -483,4 +541,4 @@ ecovid0420 %>%
     with(hist(pe10_1, main= "histograma"))
 ```
 
-![](P3_files/figure-gfm/unnamed-chunk-29-1.png)<!-- -->
+![](P3_files/figure-gfm/unnamed-chunk-35-1.png)<!-- -->
