--- a/P4.md
+++ b/P4.md
@@ -83,9 +83,9 @@ nos da una medida de distancia promedio, sin el problema que siempre dé
 cero, como pasaría si no la eleváramos a la cuadrado. A continuación
 presentamso sus fórmulas para la población y la muestra.
 
-\[s^2=\frac{\sum_{i=1}^{n}(x_i-\bar{x}) }{n-1}\]
+\[s^2=\frac{\sum_{i=1}^{n}(x_i-\bar{x})^2 }{n-1}\]
 
-\[\sigma^2=\frac{\sum_{i=1}^{N}(x_i-\mu) }{N}\]
+\[\sigma^2=\frac{\sum_{i=1}^{N}(x_i-\mu)^2 }{N}\]
 
 La medida muestral es diferente a la poblacional en su denominador. Esto
 proviene de la corrección de Bessel, que corrige el sesgo estadístico en
@@ -96,7 +96,7 @@ Debido que tenemos las unidades originales de nuestra variable: pesos al
 cuadrado, años al cuadrado, horas al cuadrado. De ahí, que sea
 importante sacarle raíz cuadrado:
 
-\[s= \sqrt{s^2}=\sqrt{\frac{\sum_{i=1}^{n}(x_i-\bar{x}) }{n-1}}\]
+\[s= \sqrt{s^2}=\sqrt{\frac{\sum_{i=1}^{n}(x_i-\bar{x})^2 }{n-1}}\]
 
 La desviación estándar es entonces una medida de dispersión, que nos
 dice qué tan alejados están los datos de la media. Por lo que aporta
@@ -198,7 +198,7 @@ el concenpto de rango intercuartílico (RIC), que es la diferencia entre
 el cuartil 1 y el cuartil 3, es decir, establece el rango donde se
 concentra el 50% de los datos.
 
-\[ RIC= Q_1 - Q_3 \]
+\[ RIC= Q_3 - Q_1 \]
 
 Otro concepto que utiliza el gráfico es el de atípicos, pero más allá de
 lo que ya habíamos hecho anteriormente (visualmente), propone unas
@@ -335,7 +335,7 @@ la función que nos calcula la media expandida o ponderada:
 
 ``` r
 ecovid0420 %>% 
-  filter(clase2==1 & pb1!=4) %>% #vamos a quitar los que no reciben ingresos
+  filter(clase2==1) %>% #sólo trabajadores
   group_by(as_label(pb1))  %>%  # hace el agrupamiento para la variables categóricas
   summarise(media=mean(pe10_1, na.rm=T),
             media_ponderada=
@@ -472,6 +472,47 @@ ICI_2018 %>%
 ```
 
     ## [1] -0.4788776
+
+# Etiquetado de variables
+
+Adenda de lo visto en el curso
+
+``` r
+#Revisamos los valores de la variable
+
+table(ecovid0420$pos_ocu)
+```
+
+    ## 
+    ##    0    1    2    3 
+    ## 2700 2050  796   47
+
+``` r
+# De acuerdo a la documentación de la base de datos tenemos:
+
+ecovid0420$pos_ocu<-set_labels(ecovid0420$pos_ocu,
+                               labels=c("No Aplica", # para 0
+                                        "Subordinadxs", # para el 1
+                                        "Cuenta Propia", # para el 2
+                                        "Sin pago")) # Para el 3
+```
+
+Así establecemos estiquetas de valores.
+
+Para etiquetar variable:
+
+``` r
+set_label(ecovid0420$pos_ocu)<-"Posición en la ocupación"
+```
+
+Comando “paste”, pega el valor de algún objeto. Así verificamos que
+tengamos esta información
+
+``` r
+paste(get_label(ecovid0420$pos_ocu))
+```
+
+    ## [1] "Posición en la ocupación"
 
 # Ejercicio
 
