--- a/P7.md
+++ b/P7.md
@@ -31,8 +31,19 @@ Tenemos que declarar la información en objetos para poderla utilizar
 ## Insumos
 path1<-"./datos/kawabata.epub" # formato epub
 path2<-"./datos/lobo_antunes.pdf" #formato pdf
-path3<-"./datos/amlo_abri.txt" #formato pdf
+path3<-"./datos/amlo_abri.txt" #formato txt
 ```
+
+Para lo que trabajan desde otro proyecto: Para el insumo 1 tienen que
+hacer el upload a su proyecto e importarlo. Para los otros dos será
+necesario sólo hacer un cambio
+
+``` r
+url2 <- "https://github.com/aniuxa/CursoR-posgrado-pol/raw/master/datos/lobo_antunes.pdf"
+url3 <- "https://github.com/aniuxa/CursoR-posgrado-pol/raw/master/datos/amlo_abri.txt"
+```
+
+Sustituir en lo que sigue de la práctica “path” con “url”
 
 # Tokenización y revisión UPOS
 
@@ -96,6 +107,13 @@ class(x)
 ```
 
     ## [1] "tbl_df"     "tbl"        "data.frame"
+
+Para los que trabajan en otro proyecto, descomentar y seleccionar el
+archivo
+
+``` r
+#x<-epub(file.choose())
+```
 
 Como observamos lo que queremos son las secciones que realmente tiene
 nuestro texto (¡aunque quizás también analizar contraportadas sea otro
@@ -210,7 +228,7 @@ stats.freq[1:25,] %>%
   coord_flip() + labs(y="Frecuencia", x="Sustantivo") + theme_minimal()
 ```
 
-![](P7_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
+![](P7_files/figure-gfm/unnamed-chunk-11-1.png)<!-- -->
 
 ### Nube de sustantivos
 
@@ -224,7 +242,7 @@ stats.freq[1:25,] %>%
   theme_minimal()
 ```
 
-![](P7_files/figure-gfm/unnamed-chunk-10-1.png)<!-- --> La vamos a poner
+![](P7_files/figure-gfm/unnamed-chunk-12-1.png)<!-- --> La vamos a poner
 más chula:
 
 ``` r
@@ -240,7 +258,7 @@ stats.freq[1:25,] %>%
       theme_minimal()
 ```
 
-![](P7_files/figure-gfm/unnamed-chunk-11-1.png)<!-- -->
+![](P7_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
 
 Otra paquetería, es más fácil pero menos editable
 
@@ -258,7 +276,7 @@ wordcloud(words = stats.freq$key, freq = stats.freq$freq,
           colors=paleta_color)
 ```
 
-![](P7_files/figure-gfm/unnamed-chunk-12-1.png)<!-- -->
+![](P7_files/figure-gfm/unnamed-chunk-14-1.png)<!-- -->
 
 ## Adjetivos
 
@@ -276,7 +294,7 @@ stats.freq[1:25,] %>%
   coord_flip() + labs(y="Frecuencia", x="Adjetivo") + theme_minimal()
 ```
 
-![](P7_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
+![](P7_files/figure-gfm/unnamed-chunk-15-1.png)<!-- -->
 
 ## Todas las palabras
 
@@ -442,7 +460,7 @@ stats.freq[1:25,] %>%
   coord_flip() + labs(y="Frecuencia", x="Palabra") + theme_minimal()
 ```
 
-![](P7_files/figure-gfm/unnamed-chunk-17-1.png)<!-- -->
+![](P7_files/figure-gfm/unnamed-chunk-19-1.png)<!-- -->
 
 Para la nube de todas la palabras
 
@@ -458,7 +476,7 @@ wordcloud(words = stats.freq$key, freq = stats.freq$freq,
           colors=paleta_color)
 ```
 
-![](P7_files/figure-gfm/unnamed-chunk-18-1.png)<!-- -->
+![](P7_files/figure-gfm/unnamed-chunk-20-1.png)<!-- -->
 
 ### Correlaciones
 
@@ -542,6 +560,12 @@ lobo<-udpipe(x = lobo_p18, object=udmodel) #"tokeniza" el texto
 
 ``` r
 text <- readLines(path3)
+```
+
+    ## Warning in readLines(path3): incomplete final line found on './datos/
+    ## amlo_abri.txt'
+
+``` r
 amlo<-udpipe(x = text, object=udmodel) #"tokeniza" el texto
 ```
 
@@ -571,7 +595,18 @@ wordcloud(words = stats.freq$key, freq = stats.freq$freq,
           colors=paleta_color)
 ```
 
-![](P7_files/figure-gfm/unnamed-chunk-26-1.png)<!-- -->
+    ## Warning in wordcloud(words = stats.freq$key, freq = stats.freq$freq, min.freq =
+    ## 5, : <html><body>you could not be fit on page. It will not be plotted.
+
+    ## Warning in wordcloud(words = stats.freq$key, freq = stats.freq$freq, min.freq =
+    ## 5, : https://raw.githubusercontent.com/aniuxa/cursor-posgrado-pol/master/datos/
+    ## amlo_abri.txt could not be fit on page. It will not be plotted.
+
+    ## Warning in wordcloud(words = stats.freq$key, freq = stats.freq$freq, min.freq
+    ## = 5, : >redirected</a>.</body></html> could not be fit on page. It will not be
+    ## plotted.
+
+![](P7_files/figure-gfm/unnamed-chunk-28-1.png)<!-- -->
 
 # Inspiración
 
@@ -581,4 +616,4 @@ Aquí algunos sitios relevantes:
 
   - <https://content-analysis-with-r.com/0-introduction.html>
 
-  - <http://www.sthda.com/english/wiki/text-mining-and-word-cloud-fundamentals-in-r-5-simple-steps-you-should-kno>
+  - <http://www.sthda.com/english/wiki/text-mining-and-word-cloud-fundamentals-in-r-5-simple-steps-you-should-know>
